--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -718,12 +718,12 @@ section.lazy-placeholder:after {
 }
 .cid-s6c0GEKVmc .navbar {
   padding: .5rem 0;
-  background: #333333;
+  background: #ffffff;
   transition: none;
   min-height: 77px;
 }
 .cid-s6c0GEKVmc .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
+  background: #ffffff;
 }
 .cid-s6c0GEKVmc a {
   font-style: normal;
@@ -814,7 +814,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-s6c0GEKVmc .dropdown .dropdown-menu {
-  background: #333333;
+  background: #ffffff;
   visibility: hidden;
   display: block;
   position: absolute;
@@ -963,11 +963,6 @@ section.lazy-placeholder:after {
 .cid-s6c0GEKVmc .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-s6c0GEKVmc .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
-}
-@media (min-width: 1024px) {
-  .cid-s6c0GEKVmc .collapsed:not(.navbar-short) .navbar-collapse {
-    max-height: calc(98.5vh - 3.8rem);
-  }
 }
 .cid-s6c0GEKVmc .collapsed button.navbar-toggler {
   display: block;
@@ -1122,5 +1117,5 @@ section.lazy-placeholder:after {
 }
 .cid-s6c0GEKVmc .nav-link:hover,
 .cid-s6c0GEKVmc .dropdown-item:hover {
-  color: #c1c1c1 !important;
+  color: #ffffff !important;
 }
